Update index.html content area text

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
         <ul id="savedColorsList"></ul> <!-- List for saved color codes -->
         <button id="colorChangeButton">Click here for a good time!</button>
         <div class="content-area">
-            This is the content area.
+            color 1
             <p class="colorCode">#ffffff</p>
             <button class="lockColorsButton">Lock Color</button>
         </div>
         <!-- Repeat the same structure for other content areas -->
         <div class="content-area">
-            This is another content area.
+            color 2
             <p class="colorCode">#ffffff</p>
             <button class="lockColorsButton">Lock Color</button>
         </div>
         <div class="content-area">
-            This is a third content area.
+            color 3
             <p class="colorCode">#ffffff</p>
             <button class "lockColorsButton">Lock Color</button>
         </div>
         <div class="content-area">
-            This is a fourth content area.
+            color 4
             <p class="colorCode">#ffffff</p>
             <button class="lockColorsButton">Lock Color</button>
         </div>
         <div class="content-area">
-            This is a fifth content area.
+            color 5
             <p class="colorCode">#ffffff</p>
             <button class="lockColorsButton">Lock Color</button>
         </div>
